# mayday.remoterack.server

./: Cargo.toml
src/: lib.rs  main.rs  updater.rs
src/Listener/: client.rs  device.rs  listener.rs  mod.rs
src/Updater/: mod.rs
