[package]
name = "server"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
serde = { version = "1.0.143", features = ["derive"] }
self_update = { version = "0.31.0", features = ["archive-tar", "archive-zip"] }
serde_json = "1.0.83"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "s"
lto= true
codegen-units = 1
